--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
     const { useState } = React;
 
     function GoogleAdsSimulator() {
+      const [searchVolume, setSearchVolume] = useState(10000);
       const [cpc, setCpc] = useState(450);
+      const [rankLoss, setRankLoss] = useState(50);
+      const [matchType, setMatchType] = useState('exact');
       const [monthlyBudget, setMonthlyBudget] = useState(500000);
       const [customCtr, setCustomCtr] = useState(4);
       const [customCvr, setCustomCvr] = useState(0.6);
@@ -27,25 +30,36 @@
       const ctrOptions = [3, 5, 7];
       const cvrOptions = [0.5, 0.75, 1];
 
+      const matchTypeMultiplier = {
+        exact: 1.1,
+        phrase: 1.925,
+        broad: 3.3
+      };
+
       const calculateResults = (ctr, cvr, scenarioBudget) => {
-        const monthlyClicks = scenarioBudget / cpc;
-        const dailyClicks = Math.round(monthlyClicks / 30);
-        const monthlyConversions = monthlyClicks * (cvr / 100);
-        const cpa = monthlyConversions > 0 ? scenarioBudget / monthlyConversions : 0;
-        const budget10More = scenarioBudget + 100000;
-        const budget20More = scenarioBudget + 200000;
-        const cv10More = (budget10More / cpc) * (cvr / 100);
-        const cv20More = (budget20More / cpc) * (cvr / 100);
+        const impressionsAfterLoss = searchVolume * ((100 - rankLoss) / 100);
+        const impressionsAfterMatch = impressionsAfterLoss * matchTypeMultiplier[matchType];
+        const clicks = impressionsAfterMatch * (ctr / 100);
+        const dailyClicks = Math.round(clicks / 30);
+        const conversions = clicks * (cvr / 100);
+        const cpa = conversions > 0 ? (clicks * cpc) / conversions : 0;
+        
+        const clicks10More = (scenarioBudget + 100000) / cpc;
+        const clicks20More = (scenarioBudget + 200000) / cpc;
+        const cv10More = clicks10More * (cvr / 100);
+        const cv20More = clicks20More * (cvr / 100);
 
         return {
-          monthlyClicks: Math.round(monthlyClicks),
+          impressions: Math.round(impressionsAfterMatch),
+          clicks: Math.round(clicks),
           dailyClicks,
-          monthlyConversions: parseFloat(monthlyConversions.toFixed(1)),
+          conversions: parseFloat(conversions.toFixed(1)),
           cpa: Math.round(cpa),
+          isLowCV: conversions < 1,
           cv10More: parseFloat(cv10More.toFixed(1)),
-          cvIncrease10: parseFloat((cv10More - monthlyConversions).toFixed(1)),
+          cvIncrease10: parseFloat((cv10More - conversions).toFixed(1)),
           cv20More: parseFloat(cv20More.toFixed(1)),
-          cvIncrease20: parseFloat((cv20More - monthlyConversions).toFixed(1))
+          cvIncrease20: parseFloat((cv20More - conversions).toFixed(1))
         };
       };
 
@@ -91,10 +105,28 @@
                 </svg>
                 入力項目
               </h2>
+
               <div className="grid md:grid-cols-2 gap-6">
+                <div>
+                  <label className="block text-sm font-semibold text-gray-700 mb-2">月間検索ボリューム</label>
+                  <input type="number" value={searchVolume} onChange={(e) => setSearchVolume(Number(e.target.value))} className="w-full px-4 py-3 border-2 border-gray-300 rounded-lg focus:border-indigo-500 focus:outline-none" />
+                </div>
                 <div>
                   <label className="block text-sm font-semibold text-gray-700 mb-2">CPC中央値（円）</label>
                   <input type="number" value={cpc} onChange={(e) => setCpc(Number(e.target.value))} className="w-full px-4 py-3 border-2 border-gray-300 rounded-lg focus:border-indigo-500 focus:outline-none" />
+                </div>
+                <div>
+                  <label className="block text-sm font-semibold text-gray-700 mb-2">ランク損失率（%）</label>
+                  <input type="number" value={rankLoss} onChange={(e) => setRankLoss(Number(e.target.value))} min="0" max="100" className="w-full px-4 py-3 border-2 border-gray-300 rounded-lg focus:border-indigo-500 focus:outline-none" />
+                  <p className="text-xs text-gray-500 mt-1">推奨：50〜60%</p>
+                </div>
+                <div>
+                  <label className="block text-sm font-semibold text-gray-700 mb-2">マッチタイプ</label>
+                  <select value={matchType} onChange={(e) => setMatchType(e.target.value)} className="w-full px-4 py-3 border-2 border-gray-300 rounded-lg focus:border-indigo-500 focus:outline-none">
+                    <option value="exact">完全一致（110%）</option>
+                    <option value="phrase">フレーズ一致（192.5%）</option>
+                    <option value="broad">インテントマッチ（330%）</option>
+                  </select>
                 </div>
                 <div className="md:col-span-2">
                   <label className="block text-sm font-semibold text-gray-700 mb-2">月間予算（円）</label>
@@ -129,9 +161,17 @@
                       <div key={idx} className="border-2 border-gray-200 rounded-xl p-5 hover:shadow-lg transition-shadow">
                         <div className={`${pattern.color} text-white px-3 py-2 rounded-lg text-center font-bold mb-4 text-sm`}>CTR {pattern.ctr}% × CVR {pattern.cvr}%</div>
                         <div className="space-y-2 text-sm">
-                          <div className="flex justify-between items-center pb-2 border-b"><span className="text-gray-600">月間クリック数</span><span className="font-bold text-gray-800">{pattern.monthlyClicks.toLocaleString()}回</span></div>
+                          <div className="flex justify-between items-center pb-2 border-b"><span className="text-gray-600">想定IMP</span><span className="font-bold text-gray-800">{pattern.impressions.toLocaleString()}回</span></div>
+                          <div className="flex justify-between items-center pb-2 border-b"><span className="text-gray-600">想定クリック数</span><span className="font-bold text-gray-800">{pattern.clicks.toLocaleString()}回</span></div>
                           <div className="flex justify-between items-center pb-2 border-b"><span className="text-gray-600">1日あたり</span><span className="font-bold text-gray-800">{pattern.dailyClicks.toLocaleString()}回</span></div>
-                          <div className="flex justify-between items-center pb-2 border-b bg-yellow-50 p-2 rounded"><span className="text-gray-600 font-semibold">月間CV数</span><span className="font-bold text-xl text-indigo-600">{pattern.monthlyConversions}件</span></div>
+                          <div className={`flex justify-between items-center pb-2 border-b p-2 rounded ${pattern.isLowCV ? 'bg-red-50' : 'bg-yellow-50'}`}>
+                            <span className={`font-semibold flex items-center gap-1 ${pattern.isLowCV ? 'text-red-700' : 'text-gray-600'}`}>
+                              {pattern.isLowCV && <svg className="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path strokeLinecap="round" strokeLinejoin="round" strokeWidth={2} d="M12 9v2m0 4h.01m-6.938 4h13.856c1.54 0 2.502-1.667 1.732-3L13.732 4c-.77-1.333-2.694-1.333-3.464 0L3.34 16c-.77 1.333.192 3 1.732 3z" /></svg>}
+                              月間CV数
+                            </span>
+                            <span className={`font-bold text-xl ${pattern.isLowCV ? 'text-red-600' : 'text-indigo-600'}`}>{pattern.conversions}件</span>
+                          </div>
+                          {pattern.isLowCV && <div className="text-xs text-red-600 bg-red-50 p-2 rounded border border-red-200">⚠️ 1件未満：CV獲得の可能性が低い</div>}
                           <div className="flex justify-between items-center pb-2 border-b bg-yellow-50 p-2 rounded"><span className="text-gray-600 font-semibold">想定CPA</span><span className="font-bold text-xl text-indigo-600">¥{pattern.cpa.toLocaleString()}</span></div>
                         </div>
                         <div className="mt-4 p-3 bg-gray-50 rounded-lg border border-gray-200">
@@ -152,6 +192,7 @@
                       <li>✓ 青色：保守的（CTR 3% × CVR 0.5%）</li>
                       <li>✓ 緑色：現実的（CTR 5% × CVR 0.75%）</li>
                       <li>✓ 紫色：楽観的（CTR 7% × CVR 1%）</li>
+                      <li>✓ <span className="text-red-600 font-bold">赤字：CV数1件未満</span>は要注意</li>
                       <li>✓ 予算増額より<strong>広告改善（CTR・CVR向上）を優先</strong>しましょう</li>
                     </ul>
                   </div>
@@ -175,9 +216,17 @@
                         <div className="flex justify-between items-center pb-2 border-b"><span className="text-gray-600">CTR</span><span className="font-bold text-gray-800">{customResult.ctr}%</span></div>
                         <div className="flex justify-between items-center pb-2 border-b"><span className="text-gray-600">CVR</span><span className="font-bold text-gray-800">{customResult.cvr}%</span></div>
                         <div className="flex justify-between items-center pb-2 border-b"><span className="text-gray-600">予算</span><span className="font-bold text-gray-800">¥{customBudget.toLocaleString()}</span></div>
-                        <div className="flex justify-between items-center pb-2 border-b"><span className="text-gray-600">月間クリック数</span><span className="font-bold text-gray-800">{customResult.monthlyClicks.toLocaleString()}回</span></div>
+                        <div className="flex justify-between items-center pb-2 border-b"><span className="text-gray-600">想定IMP</span><span className="font-bold text-gray-800">{customResult.impressions.toLocaleString()}回</span></div>
+                        <div className="flex justify-between items-center pb-2 border-b"><span className="text-gray-600">想定クリック数</span><span className="font-bold text-gray-800">{customResult.clicks.toLocaleString()}回</span></div>
                         <div className="flex justify-between items-center pb-2 border-b"><span className="text-gray-600">1日あたり</span><span className="font-bold text-gray-800">{customResult.dailyClicks.toLocaleString()}回</span></div>
-                        <div className="flex justify-between items-center pb-2 border-b bg-yellow-100 p-3 rounded"><span className="text-gray-700 font-semibold">月間CV数</span><span className="font-bold text-2xl text-orange-600">{customResult.monthlyConversions}件</span></div>
+                        <div className={`flex justify-between items-center pb-2 border-b p-3 rounded ${customResult.isLowCV ? 'bg-red-100' : 'bg-yellow-100'}`}>
+                          <span className={`font-bold flex items-center gap-1 ${customResult.isLowCV ? 'text-red-700' : 'text-gray-700'}`}>
+                            {customResult.isLowCV && <svg className="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path strokeLinecap="round" strokeLinejoin="round" strokeWidth={2} d="M12 9v2m0 4h.01m-6.938 4h13.856c1.54 0 2.502-1.667 1.732-3L13.732 4c-.77-1.333-2.694-1.333-3.464 0L3.34 16c-.77 1.333.192 3 1.732 3z" /></svg>}
+                            月間CV数
+                          </span>
+                          <span className={`font-bold text-2xl ${customResult.isLowCV ? 'text-red-600' : 'text-orange-600'}`}>{customResult.conversions}件</span>
+                        </div>
+                        {customResult.isLowCV && <div className="text-xs text-red-600 bg-red-50 p-2 rounded border border-red-200">⚠️ 1件未満：CV獲得の可能性が低い</div>}
                         <div className="flex justify-between items-center pb-2 border-b bg-yellow-100 p-3 rounded"><span className="text-gray-700 font-semibold">想定CPA</span><span className="font-bold text-2xl text-orange-600">¥{customResult.cpa.toLocaleString()}</span></div>
                       </div>
                       <div className="mt-4 p-3 bg-orange-100 rounded-lg border border-orange-300">
@@ -196,6 +245,7 @@
                       <li>✓ 独自のCTR・CVR・予算でシミュレーション可能</li>
                       <li>✓ 実際の運用データを入れて検証できます</li>
                       <li>✓ 「もしこの数値だったら？」のシナリオテストに最適</li>
+                      <li>✓ <span className="text-red-600 font-bold">CV数1件未満</span>の場合は要注意</li>
                       <li>✓ 予算増額より<strong>広告改善を優先</strong>することをおすすめします</li>
                     </ul>
                   </div>
