--- a/index.html
+++ b/index.html
@@ -44,10 +44,14 @@
         const conversions = clicks * (cvr / 100);
         const cpa = conversions > 0 ? (clicks * cpc) / conversions : 0;
         
-        const clicks10More = (scenarioBudget + 100000) / cpc;
-        const clicks20More = (scenarioBudget + 200000) / cpc;
-        const cv10More = clicks10More * (cvr / 100);
-        const cv20More = clicks20More * (cvr / 100);
+        const budget10More = scenarioBudget + 100000;
+        const budget20More = scenarioBudget + 200000;
+        const impressions10 = impressionsAfterMatch;
+        const clicks10 = impressions10 * (ctr / 100);
+        const cv10More = clicks10 * (cvr / 100);
+        const impressions20 = impressionsAfterMatch;
+        const clicks20 = impressions20 * (ctr / 100);
+        const cv20More = clicks20 * (cvr / 100);
 
         return {
           impressions: Math.round(impressionsAfterMatch),
@@ -82,6 +86,7 @@
       const customResult = {
         ctr: customCtr,
         cvr: customCvr,
+        budget: customBudget,
         ...calculateResults(customCtr, customCvr, customBudget)
       };
 
@@ -215,7 +220,7 @@
                       <div className="space-y-3">
                         <div className="flex justify-between items-center pb-2 border-b"><span className="text-gray-600">CTR</span><span className="font-bold text-gray-800">{customResult.ctr}%</span></div>
                         <div className="flex justify-between items-center pb-2 border-b"><span className="text-gray-600">CVR</span><span className="font-bold text-gray-800">{customResult.cvr}%</span></div>
-                        <div className="flex justify-between items-center pb-2 border-b"><span className="text-gray-600">予算</span><span className="font-bold text-gray-800">¥{customBudget.toLocaleString()}</span></div>
+                        <div className="flex justify-between items-center pb-2 border-b"><span className="text-gray-600">予算</span><span className="font-bold text-gray-800">¥{customResult.budget.toLocaleString()}</span></div>
                         <div className="flex justify-between items-center pb-2 border-b"><span className="text-gray-600">想定IMP</span><span className="font-bold text-gray-800">{customResult.impressions.toLocaleString()}回</span></div>
                         <div className="flex justify-between items-center pb-2 border-b"><span className="text-gray-600">想定クリック数</span><span className="font-bold text-gray-800">{customResult.clicks.toLocaleString()}回</span></div>
                         <div className="flex justify-between items-center pb-2 border-b"><span className="text-gray-600">1日あたり</span><span className="font-bold text-gray-800">{customResult.dailyClicks.toLocaleString()}回</span></div>
