--- a/index.html
+++ b/index.html
@@ -42,15 +42,13 @@
         const clicks = impressionsAfterMatch * (ctr / 100);
         const dailyClicks = Math.round(clicks / 30);
         const conversions = clicks * (cvr / 100);
-        const requiredBudget = clicks * cpc;
-        const cpa = conversions > 0 ? requiredBudget / conversions : 0;
+        const cpa = cpc / (cvr / 100); // CPA = CPC ÷ CVR
 
         return {
           impressions: Math.round(impressionsAfterMatch),
           clicks: Math.round(clicks),
           dailyClicks,
           conversions: parseFloat(conversions.toFixed(1)),
-          requiredBudget: Math.round(requiredBudget),
           cpa: Math.round(cpa),
           isLowCV: conversions < 1
         };
@@ -152,10 +150,12 @@
                     <option value="broad">インテントマッチ（330%）</option>
                   </select>
                 </div>
-                <div className="md:col-span-2">
-                  <label className="block text-sm font-semibold text-gray-700 mb-2">月間予算（円）</label>
-                  <input type="number" value={monthlyBudget} onChange={(e) => setMonthlyBudget(Number(e.target.value))} className="w-full px-4 py-3 border-2 border-gray-300 rounded-lg focus:border-indigo-500 focus:outline-none" />
-                </div>
+                {activeTab === 'budget' && (
+                  <div className="md:col-span-2">
+                    <label className="block text-sm font-semibold text-gray-700 mb-2">月間予算（円）</label>
+                    <input type="number" value={monthlyBudget} onChange={(e) => setMonthlyBudget(Number(e.target.value))} className="w-full px-4 py-3 border-2 border-gray-300 rounded-lg focus:border-indigo-500 focus:outline-none" />
+                  </div>
+                )}
               </div>
             </div>
 
@@ -185,7 +185,7 @@
               {activeTab === 'volume' && (
                 <div>
                   <div className="mb-4 p-4 bg-indigo-50 rounded-lg border border-indigo-200">
-                    <p className="text-sm text-indigo-800"><strong>検索ボリューム基準：</strong>検索ボリュームからCV数を算出し、必要な予算を表示します</p>
+                    <p className="text-sm text-indigo-800"><strong>検索ボリューム基準：</strong>検索ボリュームから月間CV数を算出し、1件取るのに必要な金額を表示します</p>
                   </div>
                   <div className="grid md:grid-cols-3 gap-6">
                     {volumePatterns.map((pattern, idx) => (
@@ -200,11 +200,21 @@
                             <span className={`font-bold text-xl ${pattern.isLowCV ? 'text-red-600' : 'text-indigo-600'}`}>{pattern.conversions}件</span>
                           </div>
                           {pattern.isLowCV && <div className="text-xs text-red-600 bg-red-50 p-2 rounded">⚠️ 1件未満</div>}
-                          <div className="flex justify-between items-center pb-2 border-b bg-blue-50 p-2 rounded"><span className="text-gray-600 font-semibold">必要予算</span><span className="font-bold text-lg text-blue-600">¥{pattern.requiredBudget.toLocaleString()}</span></div>
-                          <div className="flex justify-between items-center pb-2 border-b bg-yellow-50 p-2 rounded"><span className="text-gray-600 font-semibold">想定CPA</span><span className="font-bold text-xl text-indigo-600">¥{pattern.cpa.toLocaleString()}</span></div>
+                          <div className="p-3 bg-gradient-to-r from-blue-50 to-indigo-50 rounded-lg border-2 border-indigo-200">
+                            <div className="text-xs text-gray-600 mb-1">💰 1件取るのに必要</div>
+                            <div className="font-bold text-2xl text-indigo-700">¥{pattern.cpa.toLocaleString()}</div>
+                          </div>
                         </div>
                       </div>
                     ))}
+                  </div>
+                  <div className="mt-6 p-5 bg-gradient-to-r from-blue-50 to-indigo-50 rounded-xl border-2 border-indigo-200">
+                    <h3 className="font-bold text-gray-800 mb-3 text-lg">💡 検索ボリューム基準について</h3>
+                    <ul className="space-y-2 text-sm text-gray-700">
+                      <li>✓ CTR（3%, 5%, 7%）× CVR（0.5%, 0.75%, 1%）の<strong>全9パターン</strong>を表示</li>
+                      <li>✓ CPAは「CPC ÷ CVR」で計算（CTRは無関係）</li>
+                      <li>✓ CVRを改善すれば、CPAは下がります</li>
+                    </ul>
                   </div>
                 </div>
               )}
@@ -226,10 +236,21 @@
                             <span className={`font-bold text-xl ${pattern.isLowCV ? 'text-red-600' : 'text-green-600'}`}>{pattern.conversions}件</span>
                           </div>
                           {pattern.isLowCV && <div className="text-xs text-red-600 bg-red-50 p-2 rounded">⚠️ 1件未満</div>}
-                          <div className="flex justify-between items-center pb-2 border-b bg-yellow-50 p-2 rounded"><span className="text-gray-600 font-semibold">想定CPA</span><span className="font-bold text-xl text-green-600">¥{pattern.cpa.toLocaleString()}</span></div>
+                          <div className="p-3 bg-gradient-to-r from-green-50 to-emerald-50 rounded-lg border-2 border-green-200">
+                            <div className="text-xs text-gray-600 mb-1">💰 1件取るのに必要</div>
+                            <div className="font-bold text-2xl text-green-700">¥{pattern.cpa.toLocaleString()}</div>
+                          </div>
                         </div>
                       </div>
                     ))}
+                  </div>
+                  <div className="mt-6 p-5 bg-gradient-to-r from-green-50 to-emerald-50 rounded-xl border-2 border-green-200">
+                    <h3 className="font-bold text-gray-800 mb-3 text-lg">💡 予算基準について</h3>
+                    <ul className="space-y-2 text-sm text-gray-700">
+                      <li>✓ 設定した予算内で獲得できるCV数を表示</li>
+                      <li>✓ CTRは計算に影響しません（予算÷CPC=クリック数）</li>
+                      <li>✓ CVRを改善すれば、同じ予算でより多くのCV獲得が可能</li>
+                    </ul>
                   </div>
                 </div>
               )}
@@ -242,24 +263,37 @@
                       <div className="space-y-4">
                         <div><label className="block text-sm font-semibold text-gray-700 mb-2">CTR (%)</label><input type="number" value={customCtr} onChange={(e) => setCustomCtr(Number(e.target.value))} step="0.1" className="w-full px-4 py-3 border border-gray-300 rounded-lg focus:border-orange-500 focus:outline-none" /></div>
                         <div><label className="block text-sm font-semibold text-gray-700 mb-2">CVR (%)</label><input type="number" value={customCvr} onChange={(e) => setCustomCvr(Number(e.target.value))} step="0.1" className="w-full px-4 py-3 border border-gray-300 rounded-lg focus:border-orange-500 focus:outline-none" /></div>
+                        <div><label className="block text-sm font-semibold text-gray-700 mb-2">月間予算（円）※予算基準用</label><input type="number" value={monthlyBudget} onChange={(e) => setMonthlyBudget(Number(e.target.value))} className="w-full px-4 py-3 border border-gray-300 rounded-lg focus:border-orange-500 focus:outline-none" /></div>
                       </div>
                     </div>
                     <div className="bg-orange-50 rounded-xl p-6 border-2 border-orange-200">
                       <h3 className="font-bold text-gray-800 mb-4 text-lg">カスタム結果</h3>
                       <div className="space-y-3 text-sm">
-                        <div className="p-3 bg-white rounded-lg">
-                          <div className="font-bold text-indigo-600 mb-2">検索ボリューム基準</div>
-                          <div className="space-y-1">
-                            <div className="flex justify-between"><span>月間CV数</span><span className="font-bold">{customVolumeResult.conversions}件</span></div>
-                            <div className="flex justify-between"><span>必要予算</span><span className="font-bold">¥{customVolumeResult.requiredBudget.toLocaleString()}</span></div>
-                            <div className="flex justify-between"><span>CPA</span><span className="font-bold">¥{customVolumeResult.cpa.toLocaleString()}</span></div>
+                        <div className="p-4 bg-white rounded-lg shadow">
+                          <div className="font-bold text-indigo-600 mb-3 flex items-center gap-2">
+                            <svg className="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path strokeLinecap="round" strokeLinejoin="round" strokeWidth={2} d="M13 7h8m0 0v8m0-8l-8 8-4-4-6 6" /></svg>
+                            検索ボリューム基準
+                          </div>
+                          <div className="space-y-2">
+                            <div className="flex justify-between"><span className="text-gray-600">月間CV数</span><span className="font-bold text-lg">{customVolumeResult.conversions}件</span></div>
+                            <div className="p-3 bg-gradient-to-r from-blue-50 to-indigo-50 rounded-lg">
+                              <div className="text-xs text-gray-600">💰 1件取るのに必要</div>
+                              <div className="font-bold text-xl text-indigo-700">¥{customVolumeResult.cpa.toLocaleString()}</div>
+                            </div>
                           </div>
                         </div>
-                        <div className="p-3 bg-white rounded-lg">
-                          <div className="font-bold text-green-600 mb-2">予算基準</div>
-                          <div className="space-y-1">
-                            <div className="flex justify-between"><span>月間CV数</span><span className="font-bold">{customBudgetResult.conversions}件</span></div>
-                            <div className="flex justify-between"><span>CPA</span><span className="font-bold">¥{customBudgetResult.cpa.toLocaleString()}</span></div>
+                        <div className="p-4 bg-white rounded-lg shadow">
+                          <div className="font-bold text-green-600 mb-3 flex items-center gap-2">
+                            <svg className="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path strokeLinecap="round" strokeLinejoin="round" strokeWidth={2} d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1M21 12a9 9 0 11-18 0 9 9 0 0118 0z" /></svg>
+                            予算基準
+                          </div>
+                          <div className="space-y-2">
+                            <div className="flex justify-between"><span className="text-gray-600">予算</span><span className="font-bold">¥{monthlyBudget.toLocaleString()}</span></div>
+                            <div className="flex justify-between"><span className="text-gray-600">月間CV数</span><span className="font-bold text-lg">{customBudgetResult.conversions}件</span></div>
+                            <div className="p-3 bg-gradient-to-r from-green-50 to-emerald-50 rounded-lg">
+                              <div className="text-xs text-gray-600">💰 1件取るのに必要</div>
+                              <div className="font-bold text-xl text-green-700">¥{customBudgetResult.cpa.toLocaleString()}</div>
+                            </div>
                           </div>
                         </div>
                       </div>
