--- a/index.html
+++ b/index.html
@@ -40,16 +40,18 @@
         const impressionsAfterLoss = searchVolume * ((100 - rankLoss) / 100);
         const impressionsAfterMatch = impressionsAfterLoss * matchTypeMultiplier[matchType];
         const clicks = impressionsAfterMatch * (ctr / 100);
-        const dailyClicks = Math.round(clicks / 30);
+        const dailyClicks = clicks / 30;
         const conversions = clicks * (cvr / 100);
-        const cpa = cpc / (cvr / 100); // CPA = CPC ÷ CVR
+        const cpa = cpc / (cvr / 100);
+        const daysTo100Clicks = dailyClicks > 0 ? 100 / dailyClicks : 0;
 
         return {
           impressions: Math.round(impressionsAfterMatch),
           clicks: Math.round(clicks),
-          dailyClicks,
+          dailyClicks: parseFloat(dailyClicks.toFixed(1)),
           conversions: parseFloat(conversions.toFixed(1)),
           cpa: Math.round(cpa),
+          daysTo100Clicks: parseFloat(daysTo100Clicks.toFixed(1)),
           isLowCV: conversions < 1
         };
       };
@@ -57,15 +59,17 @@
       // モード2：予算基準
       const calculateFromBudget = (ctr, cvr) => {
         const maxClicks = monthlyBudget / cpc;
-        const dailyClicks = Math.round(maxClicks / 30);
+        const dailyClicks = maxClicks / 30;
         const conversions = maxClicks * (cvr / 100);
-        const cpa = cpc / (cvr / 100); // CPA = CPC ÷ CVR
+        const cpa = cpc / (cvr / 100);
+        const daysTo100Clicks = dailyClicks > 0 ? 100 / dailyClicks : 0;
 
         return {
           clicks: Math.round(maxClicks),
-          dailyClicks,
+          dailyClicks: parseFloat(dailyClicks.toFixed(1)),
           conversions: parseFloat(conversions.toFixed(1)),
           cpa: Math.round(cpa),
+          daysTo100Clicks: parseFloat(daysTo100Clicks.toFixed(1)),
           isLowCV: conversions < 1
         };
       };
@@ -232,7 +236,8 @@
                         <div className="space-y-2 text-sm">
                           <div className="flex justify-between items-center pb-2 border-b"><span className="text-gray-600">想定IMP</span><span className="font-bold text-gray-800">{pattern.impressions.toLocaleString()}回</span></div>
                           <div className="flex justify-between items-center pb-2 border-b"><span className="text-gray-600">想定クリック数</span><span className="font-bold text-gray-800">{pattern.clicks.toLocaleString()}回</span></div>
-                          <div className="flex justify-between items-center pb-2 border-b"><span className="text-gray-600">1日あたり</span><span className="font-bold text-gray-800">{pattern.dailyClicks.toLocaleString()}回</span></div>
+                          <div className="flex justify-between items-center pb-2 border-b"><span className="text-gray-600">1日あたりのクリック数</span><span className="font-bold text-gray-800">{pattern.dailyClicks}回</span></div>
+                          <div className="flex justify-between items-center pb-2 border-b bg-blue-50 p-2 rounded"><span className="text-gray-600">100クリック到達</span><span className="font-bold text-blue-700">{pattern.daysTo100Clicks}日</span></div>
                           <div className={`flex justify-between items-center pb-2 border-b p-2 rounded ${pattern.isLowCV ? 'bg-red-50' : 'bg-yellow-50'}`}>
                             <span className={`font-semibold ${pattern.isLowCV ? 'text-red-700' : 'text-gray-600'}`}>月間CV数</span>
                             <span className={`font-bold text-xl ${pattern.isLowCV ? 'text-red-600' : 'text-indigo-600'}`}>{pattern.conversions}件</span>
@@ -269,7 +274,8 @@
                         <div className={`${pattern.color} text-white px-3 py-2 rounded-lg text-center font-bold mb-4 text-sm`}>CTR {pattern.ctr}% × CVR {pattern.cvr}%</div>
                         <div className="space-y-2 text-sm">
                           <div className="flex justify-between items-center pb-2 border-b"><span className="text-gray-600">想定クリック数</span><span className="font-bold text-gray-800">{pattern.clicks.toLocaleString()}回</span></div>
-                          <div className="flex justify-between items-center pb-2 border-b"><span className="text-gray-600">1日あたり</span><span className="font-bold text-gray-800">{pattern.dailyClicks.toLocaleString()}回</span></div>
+                          <div className="flex justify-between items-center pb-2 border-b"><span className="text-gray-600">1日あたりのクリック数</span><span className="font-bold text-gray-800">{pattern.dailyClicks}回</span></div>
+                          <div className="flex justify-between items-center pb-2 border-b bg-green-50 p-2 rounded"><span className="text-gray-600">100クリック到達</span><span className="font-bold text-green-700">{pattern.daysTo100Clicks}日</span></div>
                           <div className={`flex justify-between items-center pb-2 border-b p-2 rounded ${pattern.isLowCV ? 'bg-red-50' : 'bg-yellow-50'}`}>
                             <span className={`font-semibold ${pattern.isLowCV ? 'text-red-700' : 'text-gray-600'}`}>月間CV数</span>
                             <span className={`font-bold text-xl ${pattern.isLowCV ? 'text-red-600' : 'text-green-600'}`}>{pattern.conversions}件</span>
@@ -316,6 +322,8 @@
                           <div className="space-y-2">
                             <div className="flex justify-between"><span className="text-gray-600">想定IMP</span><span className="font-bold">{customVolumeResult.impressions.toLocaleString()}回</span></div>
                             <div className="flex justify-between"><span className="text-gray-600">想定クリック数</span><span className="font-bold">{customVolumeResult.clicks.toLocaleString()}回</span></div>
+                            <div className="flex justify-between"><span className="text-gray-600">1日あたりのクリック数</span><span className="font-bold">{customVolumeResult.dailyClicks}回</span></div>
+                            <div className="flex justify-between bg-blue-50 p-2 rounded"><span className="text-gray-600">100クリック到達</span><span className="font-bold text-blue-700">{customVolumeResult.daysTo100Clicks}日</span></div>
                             <div className="flex justify-between"><span className="text-gray-600">月間CV数</span><span className="font-bold text-lg">{customVolumeResult.conversions}件</span></div>
                             <div className="p-3 bg-gradient-to-r from-blue-50 to-indigo-50 rounded-lg">
                               <div className="text-xs text-gray-600">💰 1件取るのに必要</div>
@@ -331,6 +339,8 @@
                           <div className="space-y-2">
                             <div className="flex justify-between"><span className="text-gray-600">予算</span><span className="font-bold">¥{monthlyBudget.toLocaleString()}</span></div>
                             <div className="flex justify-between"><span className="text-gray-600">想定クリック数</span><span className="font-bold">{customBudgetResult.clicks.toLocaleString()}回</span></div>
+                            <div className="flex justify-between"><span className="text-gray-600">1日あたりのクリック数</span><span className="font-bold">{customBudgetResult.dailyClicks}回</span></div>
+                            <div className="flex justify-between bg-green-50 p-2 rounded"><span className="text-gray-600">100クリック到達</span><span className="font-bold text-green-700">{customBudgetResult.daysTo100Clicks}日</span></div>
                             <div className="flex justify-between"><span className="text-gray-600">月間CV数</span><span className="font-bold text-lg">{customBudgetResult.conversions}件</span></div>
                             <div className="p-3 bg-gradient-to-r from-green-50 to-emerald-50 rounded-lg">
                               <div className="text-xs text-gray-600">💰 1件取るのに必要</div>
